# adaptive-traction-mpc

./: .gitattributes  .gitignore  AGENTS.md  README.md  glm_idea.py  integrated_sim_3d.py  pyproject.toml  requirements.txt  results.csv  results_v2.csv  run_experiment_matrix.py
configs/: spring2d.yaml  spring2d_adaptive_mpc_conditions.yaml  spring2d_adaptive_mpc_conditions_cem.yaml  spring2d_adaptive_mpc_conditions_cem_feasfirst.yaml  spring2d_estimator_identifier_coupling.yaml  spring2d_fixed_mpc.yaml  spring2d_identifier_conditions.yaml  spring2d_policies.yaml  spring2d_runtime_safety_filter.yaml  spring2d_safety_aware_cem.yaml
docs/: old_stage1_readme.md
ongoing_parts/: compare_gpr_rls.py  integrated_sim_3d.py  results_nonlinear.csv  results_v3.csv  run_experiment_matrix_nonlinear.py
results/: README.md  reproducibility_manifest.md
scripts/: check_mujoco_scene.py  make_mujoco_scene.py  run_spring2d_adaptive_mpc_conditions.py  run_spring2d_coupling_ablation.py  run_spring2d_estimator_comparison.py  run_spring2d_filtering_comparison.py  run_spring2d_fixed_mpc.py  run_spring2d_identifier_conditions.py  run_spring2d_openloop.py  run_spring2d_policies.py  run_spring2d_safety_aware_cem_comparison.py  run_spring2d_safety_filter_comparison.py  run_spring2d_safety_filter_stage6b_diagnosis.py  run_spring2d_solver_comparison.py  run_spring2d_stage10a_dynamics_audit.py  run_spring2d_stage10b_estimator_benchmark.py  run_spring2d_stage10c_multiple_shooting_mhe.py  run_spring2d_stage10d_mhe_sanity_audit.py  run_spring2d_stage10e_corrected_mhe_benchmark.py  (+28 more)
(+192 files in other folders)
