[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptive-traction-mpc"
version = "0.1.0"
description = "Safe online identification and adaptive MPC for robotic traction experiments."
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "casadi",
    "mujoco",
    "matplotlib",
    "Pillow",
    "scikit-learn",
    "PyYAML",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]
